--- a/NewProject/src/css/style.css
+++ b/NewProject/src/css/style.css
@@ -1,4 +1,10 @@
 nav{
+	position: fixed;
+	width: 100%;
+	height: 61px;
+	z-index: 2;
+}
+.fone{
 	background-color: #344051;
 	width: 100%;
 	height: 61px;
@@ -22,6 +28,12 @@ nav{
 	font-size: 15px;
 	float: left;
 	font-family: sans-serif;
+	transform: scale(1, 1);
+	transition-duration: 0.4s;
+}
+.menu li:hover{
+	transform: scale(1.3, 1.3);
+	font-weight: bold;
 }
 .main{
 	width: 100%;
@@ -64,9 +76,7 @@ nav{
 	text-transform: uppercase;
 	color: #555e6c;
 }
-#img1{
-	margin-top: 30px;
-}
+
 #img2{
 	margin-top: 63px;
 }
@@ -345,4 +355,55 @@ textarea{
 	margin-top: 11px;
 	margin-left: 750px;
 	word-spacing: 51px;
+}
+
+/*Анимация*/
+
+.title_container input{
+	transition-duration: 0.4s;
+	transform: scale(1,1);
+}
+.title_container input:hover{
+	transform: scale(1.3,1.3);
+	background-color:  #354051;
+	color: white;
+}
+#img1{
+	animation-name: line;
+	animation-duration: 1s;
+	animation-fill-mode: forwards;
+}
+@keyframes line{
+	0%{
+		width: 0px;
+		height: 0px;
+		background-color: white;
+	}
+	100%{
+		margin: 0px auto;
+		width: 60px;
+		height: 4px;
+		background-color: darkorange;
+	}
+}
+.pad{
+	margin-top: 40px;
+}
+.about_me input{
+	transition-duration: 0.4s;
+	transform: scale(1,1);
+}
+.about_me input:hover{
+	transform: scale(1.3,1.3);
+	background-color:  #354051;
+	color: white;
+}
+#send{
+	transition-duration: 0.4s;
+	transform: scale(1,1);
+}
+#send:hover{
+	transform: scale(1.3,1.3);
+	background-color: white;
+	color: #354051;
 }
