--- a/K/src/css/style.css
+++ b/K/src/css/style.css
@@ -159,12 +159,21 @@ nav{
 	font-family: sans-serif;
 	}
 .case input{
-	margin-top: 848px;
+	margin-top: 856px;
 	margin-left: 380px;
 	border-radius: 5px;
 	width: 203px;
 	height: 45px;
-	opacity: 0;
+	background-color:#63b5ae;
+	color: white;
+	transform: scale(1,1);
+	transition-duration: 0.4s;
+}
+.case input:hover{
+	border: 5px #028075 solid;
+	box-shadow: 0px 0px 20px;
+	transform: scale(1.1,1.4);
+
 }
 #span1 {
 	margin-top: 38px;
